# qpx

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  about.toml  deny.toml  typos.toml
fuzz/: Cargo.toml
fuzz/corpus/grpc_web_text_base64_observer/: split_trailer_frame
fuzz/corpus/h3_content_length_state/: content_length_mismatch
fuzz/corpus/h3_trailer_sanitizer/: trailer_forbidden_fields
fuzz/corpus/sse_event_observer/: long_line
fuzz/fuzz_targets/: client_hello_sniff.rs  config_canonical_loader.rs  connect_frame_observer.rs  datagram_capsule_parser.rs  ftp_response_parser.rs  grpc_frame_observer.rs  grpc_web_binary_frame_observer.rs  grpc_web_text_base64_observer.rs  h3_content_length_state.rs  h3_trailer_sanitizer.rs  http1_request_head.rs  ipc_meta_frame.rs  proxy_v2_parser.rs  qpack_decoder.rs  reverse_target_input_deserializer.rs  shm_ring_ops.rs  sse_event_observer.rs  streaming_requirement_config_validator.rs
qpx-acme/: Cargo.toml
qpx-acme/src/: lib.rs  provisioner.rs  store.rs
qpx-auth/: Cargo.toml
qpx-auth/src/: lib.rs
qpx-auth/src/auth/: authenticator.rs  cache.rs  digest.rs  ldap.rs  local.rs  mod.rs  tests.rs  util.rs
qpx-core/: Cargo.toml
qpx-core/src/: auth.rs  config.rs  envsubst.rs  exporter.rs  lib.rs  matchers.rs  observability.rs  prefilter.rs  redaction.rs  rules.rs  secure_file.rs  shm_ring.rs  tls.rs  uri_template.rs
qpx-core/src/config/: defaults.rs  load.rs  tests.rs  types.rs  validate.rs  validate_tests.rs
qpx-core/src/ipc/: meta.rs  mod.rs  protocol.rs  shm.rs
qpx-core/src/matchers/: compile.rs  destination.rs  eval.rs  headers.rs  identity.rs  mod.rs  numeric.rs  rpc.rs  tests.rs  trace.rs
qpx-core/src/middleware/: access_log.rs
qpx-core/src/prefilter/: bit_mask.rs  domain_trie.rs  mod.rs  tests.rs  text_pattern.rs
qpx-core/src/rules/: context.rs  header_control.rs  mod.rs  observation.rs  tests.rs
qpx-core/src/tls/: ca.rs  cert_info.rs  client_hello.rs  config.rs  mod.rs  resolver.rs  tests.rs  trust.rs
qpx-h3/: Cargo.toml
qpx-h3/src/: client.rs  huffman.rs  lib.rs  protocol.rs  qpack.rs  qpack_fields.rs  response.rs  server.rs  sharding.rs  transport.rs
qpx-h3/src/client/: driver.rs  mod.rs  registry.rs
qpx-h3/src/protocol/: control.rs  mod.rs  settings.rs  tests.rs
qpx-h3/src/qpack/: codec.rs  connection.rs  decode.rs  dynamic_table.rs  encode.rs  encoder.rs  encoder_stream.rs  errors.rs  field_reader.rs  fields.rs  mod.rs  static_table.rs  tests.rs
qpx-h3/src/server/: connection.rs  helpers.rs  mod.rs  registry.rs  tests.rs
qpx-h3/src/transport/: datagram.rs  metrics.rs  mod.rs  request_stream.rs  split.rs  streams.rs  tests.rs
qpx-h3/tests/: e2e.rs
qpx-h3/tests/e2e/: connect.rs  mod.rs  protocol.rs  webtransport.rs
qpx-http/: Cargo.toml
qpx-http/src/: lib.rs  sharding.rs
qpx-http/src/body/: metrics.rs  mod.rs  tee.rs
qpx-http/src/protocol/: address.rs  common.rs  mod.rs  semantics.rs
qpx-http/src/tls/: builder.rs  client.rs  mod.rs
qpx-observability/: Cargo.toml
qpx-observability/src/: access_log.rs  handler.rs  lib.rs  logging.rs  metrics.rs  tracing_support.rs
qpx-observability/src/logging/: format.rs  security.rs
qpx-wasm/: Cargo.toml
qpx-wasm/src/: lib.rs
qpxc/: Cargo.toml
qpxc/src/: main.rs
qpxd/: Cargo.toml
qpxd-cache/: Cargo.toml
qpxd-cache/src/: backend_http.rs  backend_redis.rs  directives.rs  entry.rs  freshness.rs  hash.rs  invalidate.rs  key.rs  lib.rs  lookup_ops.rs  metrics.rs  store.rs  types.rs  util.rs  vary.rs
qpxd-cache/src/backend_http/: body.rs  tests.rs
qpxd-cache/src/backend_redis/: protocol.rs  tests.rs
qpxd-cache/src/store/: tests.rs
qpxd-cache/src/tests/: freshness_tests.rs  index_metadata_tests.rs  lookup_head_post_tests.rs  lookup_policy_tests.rs  lookup_range_tests.rs  mod.rs  store_flow_tests.rs
qpxd-cache/src/types/: body.rs
qpxd/benches/: streaming_throughput.rs
qpxd/config-templates/: forward-egress.yaml  ipc-gateway.yaml  reverse-basic.yaml  transparent-linux.yaml  trusted-identity-ext-authz.yaml
qpxd/src/: acme.rs  auth_runtime.rs  cli.rs  cli_render.rs  config_reload.rs  daemon.rs  destination.rs  exporter.rs  fastcgi_client.rs  ftp.rs  io_copy.rs  io_prefix.rs  ipc_client.rs  lib.rs  main.rs  net.rs  policy_context.rs  rate_limit.rs  runtime.rs  runtime_tests.rs  server_sets.rs  server_tasks.rs  startup.rs  tcp_bindings.rs  test_util.rs  udp_bindings.rs  udp_session_handoff.rs  udp_socket_handoff.rs  upgrade.rs  windows_handoff.rs
qpxd/src/cache/: backend_http.rs  backend_redis.rs  backends.rs  directives.rs  entry.rs  freshness.rs  hash.rs  invalidate.rs  key.rs  lookup_ops.rs  mod.rs  store.rs  tests.rs  types.rs  util.rs  vary.rs
qpxd/src/cli/: tests.rs
qpxd/src/cli_render/: match_plan.rs  mod.rs
qpxd/src/config_reload/: mod.rs  restart.rs
qpxd/src/destination/: compile.rs  mod.rs  patterns.rs  resolve.rs  tests.rs
qpxd/src/exporter/: metrics.rs  mod.rs  redaction.rs  tests.rs
qpxd/src/forward/: connect.rs  connect_extended.rs  connect_h2.rs  connect_inspect.rs  connect_tests.rs  connect_tunnel.rs  connect_udp_upstream.rs  h3.rs  h3_connect.rs  h3_connect_extended.rs  h3_connect_handlers.rs  h3_connect_parse.rs  h3_connect_prepare.rs  h3_connect_tests.rs  h3_connect_tunnel.rs  h3_connect_udp.rs  h3_invalid.rs  h3_qpx.rs  h3_qpx_connect.rs  h3_qpx_connect_policy.rs  h3_qpx_connect_prepare.rs  mod.rs  (+11 more)
qpxd/tests/: advanced_transport_perf.rs  fastcgi_client_test.rs  fastcgi_e2e_test.rs  forward_e2e.rs  h3_streaming_e2e.rs  ipc_e2e_test.rs  ipc_e2e_tests.rs  perf_smoke.rs  reverse_e2e.rs  reverse_h3_e2e.rs  reverse_support.rs  rfc911x_contract.rs  transparent_e2e.rs  transparent_support.rs
qpxf/: Cargo.toml
qpxf/src/: config.rs  fastcgi.rs  ipc_request.rs  lib.rs  main.rs  metrics.rs  router.rs  server.rs
qpxf/tests/: cgi_executor_test.rs  cgi_executor_tests.rs  fastcgi_protocol_tests.rs  ipc_server_regression_test.rs  ipc_server_regression_tests.rs  wasm_executor_test.rs
qpxr/: Cargo.toml
qpxr/src/: cli.rs  hub.rs  ingest.rs  lib.rs  main.rs  pcap.rs  security.rs  stream.rs
(+725 files in other folders)
