[workspace]
resolver = "2"
members = [
  "qpx-core",
  "qpxd",
  "qpxr",
  "qpxc",
  "qpxf"
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
serde_ignored = "0.1"
regex = "1"
cidr = "0.2"
globset = "0.4"
url = "2"
percent-encoding = "2"
httpdate = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", default-features = false }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.32"
arc-swap = "1"
notify = "6"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs-next = "2"

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
webpki-roots = "0.26"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
lru = "0.16.3"
native-tls = { version = "0.2", features = ["alpn"] }
tokio-native-tls = "0.3"
x509-parser = { version = "0.18", default-features = false }
instant-acme = { version = "0.8.4", default-features = false }

# HTTP
hyper = { version = "0.14", features = ["full"] }
tower-service = "0.3"
http = "0.2"
http1 = { package = "http", version = "1" }
http-body = "0.4"
httparse = "1"
libc = "0.2"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-datagram = "0.0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }

# Auth/LDAP
ldap3 = { version = "0.12", default-features = false }
base64 = "0.22"
rand = "0.8"

# Hashing
sha2 = "0.10"

# FTP
suppaftp = "5"

# PCAP
pcap-file = "2"
etherparse = "0.13"

# WASM
wasmtime = "41"
wasmtime-wasi = "41"

# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
# Release defaults are already optimized; these settings mainly reduce size while keeping perf.
lto = "thin"
codegen-units = 1
strip = "symbols"
