[workspace]
resolver = "2"
members = [
  "qpx-core",
  "qpx-http",
  "qpx-auth",
  "qpx-h3",
  "qpx-wasm",
  "qpx-acme",
  "qpx-observability",
  "qpxd-cache",
  "qpxd",
  "qpxr",
  "qpxc",
  "qpxf",
  "xtask"
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.92"
version = "0.3.2"

[workspace.lints.rust]
dead_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "serde_norway", version = "0.9" }
serde_json = "1"
serde_ignored = "0.1"
regex = "1"
cidr = "0.2"
globset = "0.4"
url = "2"
percent-encoding = "2"
httpdate = "1"
bytes = "1"
memchr = "2"
brotli = "8"
flate2 = "1"
zstd = { version = "0.13", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
criterion = { version = "0.8", features = ["async_tokio"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.32", default-features = false }
arc-swap = "1"
crossbeam-channel = "0.5"
notify = "6"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs-next = "2"
zeroize = "1"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "1"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
lru = "0.16.3"
native-tls = { version = "0.2", features = ["alpn"] }
tokio-native-tls = "0.3"
x509-parser = { version = "0.18", default-features = false }
instant-acme = { version = "0.8.4", default-features = false }

# HTTP
hyper = { version = "1", default-features = false, features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server", "http1", "http2", "tokio"] }
tower-service = "0.3"
http = "1"
http-body = "1"
http-body-util = { version = "0.1", features = ["channel"] }
h2 = "0.4"
httparse = "1"
libc = "0.2"
quinn = "0.11"
h3 = { version = "0.0.8", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-datagram = "0.0.2"

# Async runtime
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync", "process", "signal", "fs"] }
tokio-util = "0.7"
socket2 = { version = "0.6", features = ["all"] }
memmap2 = "0.9.10"
tempfile = "3.25.0"
uuid = { version = "1.21.0", default-features = false, features = ["std", "v4"] }
windows-sys = "0.61"

# Auth/LDAP
ldap3 = { version = "0.12", default-features = false }
base64 = "0.22"
pem = "3.0.6"
ring = "0.17.14"

# Hashing
sha2 = "0.10"

# PCAP
pcap-file = "2"
etherparse = "0.13"

# WASM
wasmtime = { version = "44.0.2", default-features = false, features = ["async", "cache", "cranelift", "parallel-compilation", "runtime", "std", "wat"] }
wasmtime-wasi = { version = "44.0.2", default-features = false, features = ["p1"] }

# CLI
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
syn = { version = "2", features = ["full", "visit"] }
toml = "0.9"
byteorder_slice = "3"

[profile.release]
# Release defaults are already optimized; these settings mainly reduce size while keeping perf.
lto = "thin"
codegen-units = 1
strip = "symbols"
