[package]
name = "qpx-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

auth-core = ["dep:base64", "dep:ring"]
basic-auth = ["auth-core"]
digest-auth = ["auth-core", "dep:sha2"]
ldap-auth = ["auth-core", "dep:ldap3", "dep:tokio"]
ldap-auth-rustls = ["ldap-auth", "ldap3/tls-rustls-ring"]
ldap-auth-native = ["ldap-auth", "ldap3/tls-native"]

[dependencies]
qpx-core = { path = "../qpx-core", default-features = false }
anyhow.workspace = true
tracing.workspace = true
http.workspace = true
ldap3 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
