[package]
name = "qpx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = [
  "ipc-support",
  "tls-rustls",
]

# rustls backend: required for MITM CA generation and rustls-based helpers.
tls-rustls = [
  "dep:rustls",
  "dep:webpki-roots",
  "dep:rcgen",
  "dep:lru",
  "dep:chrono",
]

tls-native = []

ipc-support = ["dep:tokio", "dep:memmap2", "dep:serde_json", "dep:dirs-next"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_ignored.workspace = true
regex.workspace = true
cidr.workspace = true
globset.workspace = true
url.workspace = true
percent-encoding.workspace = true
tracing-subscriber.workspace = true
chrono = { workspace = true, optional = true }
dirs-next = { workspace = true, optional = true }
http.workspace = true
libc.workspace = true

# TLS (rustls)
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
lru = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, optional = true }
memmap2 = { version = "0.9.10", optional = true }
bytes.workspace = true
serde_json = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.25.0"
