[package]
name = "qpx-h3"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
httpdate.workspace = true
metrics.workspace = true
quinn.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rcgen.workspace = true
