[package]
name = "qpx-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
qpx-core = { path = "../qpx-core", default-features = false }
anyhow.workspace = true
cidr.workspace = true
dirs-next.workspace = true
http.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
libc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
