[package]
name = "qpxd-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
tls-rustls = ["qpx-http/tls-rustls", "qpx-core/tls-rustls"]
tls-native = ["qpx-http/tls-native", "qpx-core/tls-native"]

[dependencies]
qpx-core = { path = "../qpx-core", default-features = false }
qpx-http = { path = "../qpx-http" }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
http.workspace = true
hyper.workspace = true
metrics.workspace = true
percent-encoding.workspace = true
httpdate.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true }
