[package]
name = "qpxd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = [
  "tls-rustls",
  "http3-backend-h3",
  "mitm",
  "acme",
  "auth-digest",
  "auth-ldap",
]

tls-rustls = [
  "dep:rustls",
  "dep:tokio-rustls",
  "qpx-core/tls-rustls",
  "qpx-http/tls-rustls",
  "qpxd-cache/tls-rustls",
]
tls-native = [
  "dep:native-tls",
  "dep:tokio-native-tls",
  "qpx-core/tls-native",
  "qpx-http/tls-native",
  "qpxd-cache/tls-native",
]

# QUIC/HTTP/3 requires rustls (via quinn).
http3 = ["dep:quinn", "qpx-http/http3"]
http3-backend-h3 = ["http3", "tls-rustls", "dep:quinn", "dep:h3", "dep:h3-quinn", "dep:h3-datagram", "qpx-http/http3-backend-h3"]
http3-backend-qpx = ["http3", "tls-rustls", "dep:quinn", "dep:qpx-h3", "qpx-http/http3-backend-qpx"]

# TLS MITM inspection requires rustls.
mitm = ["tls-rustls"]
acme = ["dep:qpx-acme", "tls-rustls", "qpx-acme/http3"]

auth-basic = ["dep:qpx-auth", "qpx-auth/basic-auth"]
auth-digest = ["auth-basic", "qpx-auth/digest-auth"]
auth-ldap = ["auth-basic", "qpx-auth/ldap-auth"]

[dependencies]
qpx-core = { path = "../qpx-core", default-features = false, features = ["ipc-support"] }
qpx-http = { path = "../qpx-http" }
qpxd-cache = { path = "../qpxd-cache" }
qpx-auth = { path = "../qpx-auth", default-features = false, optional = true }
qpx-acme = { path = "../qpx-acme", optional = true }
qpx-observability = { path = "../qpx-observability" }
qpx-h3 = { path = "../qpx-h3", optional = true }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
regex.workspace = true
cidr.workspace = true
globset.workspace = true
url.workspace = true
percent-encoding.workspace = true
httpdate.workspace = true
bytes.workspace = true
lru.workspace = true
brotli.workspace = true
flate2.workspace = true
zstd.workspace = true
tracing.workspace = true
metrics.workspace = true
arc-swap.workspace = true
crossbeam-channel.workspace = true
notify.workspace = true
async-trait.workspace = true
dirs-next.workspace = true
zeroize.workspace = true

# TLS
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
native-tls = { workspace = true, optional = true }
tokio-native-tls = { workspace = true, optional = true }
x509-parser.workspace = true

# HTTP
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
h2.workspace = true
http-body.workspace = true
http-body-util.workspace = true
httparse.workspace = true
libc.workspace = true
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
h3-datagram = { workspace = true, optional = true }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
socket2.workspace = true

# Policy assertion verification and certificate/key parsing used by qpxd itself.
# Built-in proxy auth providers stay in optional qpx-auth features above.
base64.workspace = true
pem.workspace = true
ring.workspace = true
sha2.workspace = true

# CLI
clap.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_System_Threading",
] }

[dev-dependencies]
rcgen.workspace = true
qpxf = { path = "../qpxf", default-features = false }
tracing-subscriber.workspace = true
h3.workspace = true
h3-quinn.workspace = true
criterion.workspace = true

[[bench]]
name = "streaming_throughput"
harness = false
