[package]
name = "qpxf"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["wasm"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
clap.workspace = true
http.workspace = true

wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
qpx-core = { version = "0.1.0", path = "../qpx-core", default-features = false }
