[package]
name = "qpxf"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["wasm"]
wasm = ["dep:qpx-wasm"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
clap.workspace = true
http.workspace = true
dirs-next.workspace = true
libc.workspace = true

qpx-wasm = { path = "../qpx-wasm", optional = true }
qpx-core = { version = "0.1.0", path = "../qpx-core", default-features = false, features = ["ipc-support"] }
